fix drag/drop on ie9

--- a/Web.Admin/Content/Site.css
+++ b/Web.Admin/Content/Site.css
@@ -129,3 +129,8 @@ div.noHotelRoom {
 .strike {
   text-decoration: line-through;
 }
+
+.occupant {
+    display: block;
+    background-color: rgba(255,255,255,0);
+}
